Adjusted responsive text paramaters

--- a/style.css
+++ b/style.css
@@ -2,20 +2,30 @@ html {
     font-size: 1rem;
 }
 
-@include media-breakpoint-up(sm) {
+/* anything below 576px */
+@media (max-width: 576px) {
     html {
-        font-size: 1.2rem;
+        font-size: 0.6rem;
     }
 }
 
-@include media-breakpoint-up(md) {
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
     html {
-        font-size: 1.4rem;
+        font-size: 0.6rem;
     }
 }
 
-@include media-breakpoint-up(lg) {
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
     html {
-        font-size: 1.6rem;
+        font-size: 0.8rem;
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    html {
+        font-size: 1rem;
     }
 }
