--- a/style.css
+++ b/style.css
@@ -3,29 +3,50 @@ html {
 }
 
 /* anything below 576px */
+
 @media (max-width: 576px) {
-    html {
-        font-size: 0.6rem;
-    }
-}
-
-/* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {
-    html {
-        font-size: 0.6rem;
-    }
-}
-
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
     html {
         font-size: 0.8rem;
     }
 }
 
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
+/* Small devices (landscape phones, 576px and up) */
+
+@media (min-width: 576px) {
+    html {
+        font-size: 0.8rem;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+
+@media (min-width: 768px) {
     html {
         font-size: 1rem;
     }
+}
+
+/* Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    html {
+        font-size: 1.2rem;
+    }
+} */
+
+.fa-github {
+    color: black;
+}
+
+.fa-linkedin {
+    color: #0e76a8
+}
+
+.fa-paper-plane {
+    color: grey
+}
+
+#me {
+    border-radius: 50%;
+    width: 100%;
+    height: auto;
 }
